--- a/Applied_Data_Science/Practical/ADS_Assignment_1.ipynb
+++ b/Applied_Data_Science/Practical/ADS_Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ2LZtYnNQ5smboZBE0mqS",
+      "authorship_tag": "ABX9TyM+4RKfRsykrlFD6Zt0M5Y3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e791e3d-8b07-46cf-e788-dcfccafd21f8"
+        "outputId": "c7066435-fbbb-4089-fb8f-8d923e0b42db"
       },
       "execution_count": 2,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FDr7Gx7u71Ss",
-        "outputId": "95ff83b1-cba1-4090-aeb0-ed8ef3725b54"
+        "outputId": "d494d845-8813-4d82-f285-a6e5dde908dc"
       },
       "execution_count": 3,
       "outputs": [
@@ -138,7 +138,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mZJOp0618klu",
-        "outputId": "bc5336bf-3321-478f-9562-2df6a549149e"
+        "outputId": "1793d3a3-2e4f-40ed-b90b-915c266e0d30"
       },
       "execution_count": 4,
       "outputs": [
@@ -188,7 +188,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8Fy2DcCC-jCF",
-        "outputId": "50b63db7-ca42-4158-9f96-0e1c6e4f5fcb"
+        "outputId": "b543444d-1b61-4bc4-ebe0-ab5ffb964011"
       },
       "execution_count": 6,
       "outputs": [
@@ -329,7 +329,7 @@
           "height": 585
         },
         "id": "BX7IUaFCDqIH",
-        "outputId": "d305f41a-3f12-4637-9e68-647f0891cc4a"
+        "outputId": "442f2147-89bf-4fc7-f33e-b545f87802f3"
       },
       "execution_count": 11,
       "outputs": [
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zzsbfCQOE_hR",
-        "outputId": "8f8ec8e3-1455-40e5-e8b4-e42be61c85c3"
+        "outputId": "f73ac177-0107-4eee-96be-afcbfb9e6e15"
       },
       "execution_count": 14,
       "outputs": [
@@ -530,167 +530,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# File content in JSON"
-      ],
-      "metadata": {
-        "id": "D135W69WF42e"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import json\n",
-        "\n",
-        "# Convert to dictionary format\n",
-        "output_data = {\n",
-        "    \"top_15_recommendations\": top_15_recommendations.to_dict('records'),\n",
-        "    \"total_movies\": len(movie_info),\n",
-        "    \"total_users\": len(user_info['Customer_ID'].unique()),\n",
-        "    \"recommendation_method\": \"Collaborative Filtering (Item-based)\"\n",
-        "}\n",
-        "\n",
-        "# Save to JSON file\n",
-        "with open('RA2512051010001.json', 'w') as f:\n",
-        "    json.dump(output_data, f, indent=2)\n"
-      ],
-      "metadata": {
-        "id": "jgJnPA62FS9h"
-      },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# View the JSON file content\n",
-        "with open('RA2512051010001.json', 'r') as f:\n",
-        "    json_content = json.load(f)\n",
-        "\n",
-        "print(json.dumps(json_content, indent=2))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "S0eRrXHSGD_T",
-        "outputId": "525f9f11-0ee7-49db-f98c-bc9a74fbf578"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{\n",
-            "  \"top_15_recommendations\": [\n",
-            "    {\n",
-            "      \"Movie_ID\": 28,\n",
-            "      \"Name\": \"Lilo and Stitch\",\n",
-            "      \"Year\": 2002.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 30,\n",
-            "      \"Name\": \"Something's Gotta Give\",\n",
-            "      \"Year\": 2003.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 31,\n",
-            "      \"Name\": \"Classic Albums: Meat Loaf: Bat Out of Hell\",\n",
-            "      \"Year\": 1999.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 35,\n",
-            "      \"Name\": \"Ferngully 2: The Magical Rescue\",\n",
-            "      \"Year\": 2000.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 49,\n",
-            "      \"Name\": \"Devo: The Complete Truth About De-evolution\",\n",
-            "      \"Year\": 2003.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 1865,\n",
-            "      \"Name\": \"Eternal Sunshine of the Spotless Mind\",\n",
-            "      \"Year\": 2004.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 1866,\n",
-            "      \"Name\": \"Sirens\",\n",
-            "      \"Year\": 1994.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 1868,\n",
-            "      \"Name\": \"Mad Monster Party\",\n",
-            "      \"Year\": 1967.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 1871,\n",
-            "      \"Name\": \"Fela: Music Is the Weapon\",\n",
-            "      \"Year\": 1982.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 1878,\n",
-            "      \"Name\": \"The Ghost and Mr. Chicken / The Reluctant Astronaut: Double Feature\",\n",
-            "      \"Year\": 1966.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 1879,\n",
-            "      \"Name\": \"Thomas & Sarah\",\n",
-            "      \"Year\": 1979.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 2545,\n",
-            "      \"Name\": \"Avalanche\",\n",
-            "      \"Year\": 1978.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 2572,\n",
-            "      \"Name\": \"The Sandlot 2\",\n",
-            "      \"Year\": 2005.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 2573,\n",
-            "      \"Name\": \"A Tale of Two Kitties\",\n",
-            "      \"Year\": 1996.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    },\n",
-            "    {\n",
-            "      \"Movie_ID\": 2576,\n",
-            "      \"Name\": \"X: The Movie\",\n",
-            "      \"Year\": 2000.0,\n",
-            "      \"AvgRating\": 5.0\n",
-            "    }\n",
-            "  ],\n",
-            "  \"total_movies\": 17433,\n",
-            "  \"total_users\": 829,\n",
-            "  \"recommendation_method\": \"Collaborative Filtering (Item-based)\"\n",
-            "}\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "cg_0FuzCGcBc"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -714,7 +559,7 @@
         "target_user_id = 372233\n",
         "target_user_ratings = merged_data[merged_data['Customer_ID'] == target_user_id]"
       ],
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -738,7 +583,7 @@
         "user_similarity = cosine_similarity(target_user_row, user_movie_matrix_filled)\n",
         "user_similarity_df = pd.DataFrame(user_similarity.T, index=user_movie_matrix_filled.index, columns=['similarity'])"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -761,7 +606,7 @@
         "user_similarity_sorted = user_similarity_df.sort_values(by='similarity', ascending=False)\n",
         "top_similar_users = user_similarity_sorted[user_similarity_sorted.index != target_user_id].head(15)"
       ],
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -785,7 +630,7 @@
       "source": [
         "movies_by_similar_users = merged_data[merged_data['Customer_ID'].isin(top_similar_users.index)]"
       ],
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -810,7 +655,7 @@
         "watched_movie_ids = target_user_ratings['Movie_ID'].tolist()\n",
         "recommended_movies_raw = movies_by_similar_users[~movies_by_similar_users['Movie_ID'].isin(watched_movie_ids)]"
       ],
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -833,7 +678,7 @@
         "movie_recommendations = recommended_movies_raw.groupby('Movie_ID')['Rating'].mean().sort_values(ascending=False)\n",
         "top_recommendation_ids = movie_recommendations.head(15).index.tolist()"
       ],
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -854,7 +699,7 @@
       "source": [
         "top_recommended_movies_details = movie_info[movie_info['Movie_ID'].isin(top_recommendation_ids)]"
       ],
-      "execution_count": 23,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -877,13 +722,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f328271d",
-        "outputId": "659e39ad-b96a-4c7d-d26b-94c50d724b70"
+        "outputId": "98a5b4bb-5278-49d2-c059-d3cc3f43c42a"
       },
       "source": [
         "print(\"Recommended Movies for User 372233:\\n\")\n",
         "print(top_recommended_movies_details.to_string(index=False))"
       ],
-      "execution_count": 24,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,13 +757,144 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# File content in JSON"
+      ],
       "metadata": {
-        "id": "3zc3D8uDH2c9"
+        "id": "ZMt4niZtupB8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "\n",
+        "# Convert to dictionary format\n",
+        "output_data = {\n",
+        "    \"top_15_recommendations_for_user_372233\": top_recommended_movies_details.to_dict('records'),\n",
+        "    \"total_movies\": len(movie_info),\n",
+        "    \"total_users\": len(user_info['Customer_ID'].unique()),\n",
+        "    \"recommendation_method\": \"Collaborative Filtering (User-based)\"\n",
+        "}\n",
+        "\n",
+        "# Save to JSON file\n",
+        "with open('RA2512051010001.json', 'w') as f:\n",
+        "    json.dump(output_data, f, indent=2)"
+      ],
+      "metadata": {
+        "id": "jgJnPA62FS9h"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the JSON file content\n",
+        "with open('RA2512051010001.json', 'r') as f:\n",
+        "    json_content = json.load(f)\n",
+        "\n",
+        "print(json.dumps(json_content, indent=2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S0eRrXHSGD_T",
+        "outputId": "8c3a14cb-ba3e-4538-fe23-ae65c14619a2"
       },
       "execution_count": 24,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"top_15_recommendations_for_user_372233\": [\n",
+            "    {\n",
+            "      \"Movie_ID\": 92,\n",
+            "      \"Year\": 2002.0,\n",
+            "      \"Name\": \"ECW: Cyberslam '99\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 258,\n",
+            "      \"Year\": 1999.0,\n",
+            "      \"Name\": \"Mann\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 306,\n",
+            "      \"Year\": 2005.0,\n",
+            "      \"Name\": \"Sesame Street: Sing Yourself Silly!\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 340,\n",
+            "      \"Year\": 1998.0,\n",
+            "      \"Name\": \"Midnight: 2000 Seen By...\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 343,\n",
+            "      \"Year\": 2000.0,\n",
+            "      \"Name\": \"French and Saunders: Live\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 404,\n",
+            "      \"Year\": 2001.0,\n",
+            "      \"Name\": \"The Shaft\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 598,\n",
+            "      \"Year\": 1973.0,\n",
+            "      \"Name\": \"Bobby Darin: Mack is Back\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 629,\n",
+            "      \"Year\": 1984.0,\n",
+            "      \"Name\": \"Firestarter\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 659,\n",
+            "      \"Year\": 1972.0,\n",
+            "      \"Name\": \"The Last House on the Left\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 660,\n",
+            "      \"Year\": 2000.0,\n",
+            "      \"Name\": \"Saving Grace\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 1234,\n",
+            "      \"Year\": 1994.0,\n",
+            "      \"Name\": \"Crooklyn\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 1270,\n",
+            "      \"Year\": 2000.0,\n",
+            "      \"Name\": \"The Great Gatsby\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 1271,\n",
+            "      \"Year\": 1939.0,\n",
+            "      \"Name\": \"Drums Along the Mohawk\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 1961,\n",
+            "      \"Year\": 1939.0,\n",
+            "      \"Name\": \"Port of Shadows\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"Movie_ID\": 1963,\n",
+            "      \"Year\": 2000.0,\n",
+            "      \"Name\": \"Beautiful Creatures\"\n",
+            "    }\n",
+            "  ],\n",
+            "  \"total_movies\": 17433,\n",
+            "  \"total_users\": 829,\n",
+            "  \"recommendation_method\": \"Collaborative Filtering (User-based)\"\n",
+            "}\n"
+          ]
+        }
+      ]
     }
   ]
 }
