--- a/Applied_Data_Science/Practical/sangram_lembe_Unit_2_Lab_4_Regex_and_Web_Scraping.ipynb
+++ b/Applied_Data_Science/Practical/sangram_lembe_Unit_2_Lab_4_Regex_and_Web_Scraping.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -68,11 +70,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Gjuk1byjUkwl",
-        "outputId": "ab319e3f-47be-499b-a28d-b6b0046e071b"
+        "outputId": "4b210570-8f9b-480d-a884-9c09767d6332"
       },
       "execution_count": 2,
       "outputs": [
@@ -107,11 +108,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "sfDrcsYGUrBt",
-        "outputId": "55ed1676-7e5e-4ad8-a5ef-f765cea8f41f"
+        "outputId": "36d58a98-fcca-4e23-aa12-2cb64ba62657"
       },
       "execution_count": 3,
       "outputs": [
@@ -145,11 +145,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "l9rHbeplU06z",
-        "outputId": "76fefaba-e19a-47ca-b7a4-09ecbf16c04a"
+        "outputId": "73808417-4c1d-4b30-acf3-4c2d9b9fb7f3"
       },
       "execution_count": 4,
       "outputs": [
@@ -182,11 +181,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "x9NTTbrdU3fF",
-        "outputId": "a6306b5e-7e88-4872-c7d7-9732ddb55698"
+        "outputId": "c5a22f30-e645-4b24-9bb5-039884162472"
       },
       "execution_count": 5,
       "outputs": [
@@ -222,11 +220,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "kEtXexv5U872",
-        "outputId": "f854bf93-7c89-4dcc-e9c1-d98299706aec"
+        "outputId": "4034e947-a20f-4e59-92e6-3969eee3aba6"
       },
       "execution_count": 6,
       "outputs": [
@@ -282,11 +279,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "5zgZkOArVIxH",
-        "outputId": "91f73895-4d65-4eec-b969-8e8bb2999c18"
+        "outputId": "0cc84a82-db2f-40a9-b40a-010a8596fd38"
       },
       "execution_count": 8,
       "outputs": [
@@ -318,11 +314,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ToCq3YaiVMjW",
-        "outputId": "77aea76e-781b-4ee7-fc24-f3d29cc3b2cf"
+        "outputId": "c977fb93-3e3f-4a69-fd85-55969d35db27"
       },
       "execution_count": 9,
       "outputs": [
@@ -353,11 +348,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "kC3JqldKVOpW",
-        "outputId": "b3029595-a754-4346-9da7-8b90aab4b68d"
+        "outputId": "543332d2-bb09-4257-95a9-35a704385d7a"
       },
       "execution_count": 10,
       "outputs": [
@@ -390,11 +384,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ZMnf2el9VXWf",
-        "outputId": "6c2b727f-1e77-4d9e-9264-05862a71112e"
+        "outputId": "d9fcaf78-833f-4fe1-a182-047c083be2d7"
       },
       "execution_count": 11,
       "outputs": [
@@ -428,11 +421,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vvOzvQZEVZp9",
-        "outputId": "705973c9-282d-452e-ad42-30f927cc2656"
+        "outputId": "09233bb5-55fe-4a66-8df5-d0afc6077f8f"
       },
       "execution_count": 12,
       "outputs": [
@@ -462,11 +454,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XqVNLVwHVd7C",
-        "outputId": "1a636aa1-fe1c-42e9-e9f3-f413ca9be443"
+        "outputId": "784988d3-b02d-4821-93a3-e4aec6202604"
       },
       "execution_count": 13,
       "outputs": [
@@ -496,11 +487,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "3yhH-z_VVsix",
-        "outputId": "8161f56f-613a-4c2b-9bfa-0dc9d0ab66b0"
+        "outputId": "1e78190e-5773-4fcd-e8cd-d2b9121c5a4c"
       },
       "execution_count": 14,
       "outputs": [
@@ -530,11 +520,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XOWjeyUcVxOa",
-        "outputId": "9b35f350-45b2-4356-b46b-308010c47caf"
+        "outputId": "2f74772a-9a6e-461b-d8df-2b756eb80edc"
       },
       "execution_count": 15,
       "outputs": [
@@ -566,11 +555,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Vkzgzsf5V2of",
-        "outputId": "52a25003-d6fa-492b-c8f5-527a743ea4c5"
+        "outputId": "3666e2b1-4df8-4d34-c576-60d966459217"
       },
       "execution_count": 16,
       "outputs": [
@@ -606,11 +594,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "oZyefN2iV5MU",
-        "outputId": "b8901980-c03e-48b3-8b16-4bda8ef01840"
+        "outputId": "bf7d11fd-fb62-4d3f-845c-75d7cb27a581"
       },
       "execution_count": 17,
       "outputs": [
@@ -644,11 +631,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "LHuVFcP0V5I5",
-        "outputId": "6eb95147-c054-459e-b37d-a1025abc3606"
+        "outputId": "53d2a6fb-832e-4845-eb45-64189c789aa8"
       },
       "execution_count": 18,
       "outputs": [
@@ -698,11 +684,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8h3rOQVmWIxT",
-        "outputId": "f02c515d-2d8d-4329-d52a-d9658dd05c19"
+        "outputId": "b9aff141-371b-4e5b-c681-080f4ee6b3dd"
       },
       "execution_count": 19,
       "outputs": [
@@ -744,11 +729,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Q36DP617WTT9",
-        "outputId": "f5858b1b-158b-479f-eaca-155a16e6081c"
+        "outputId": "a4df014c-e498-4d4e-f203-6429e3aa1682"
       },
       "execution_count": 20,
       "outputs": [
@@ -834,11 +818,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "51QhZ1L-WY7Z",
-        "outputId": "4ff0ba56-7871-49e6-9948-337bbc5a587f"
+        "outputId": "7bf9258d-5095-4f6f-fc8c-3f7d34c162ee"
       },
       "execution_count": 21,
       "outputs": [
@@ -919,11 +902,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "sogEtB9PX8zn",
-        "outputId": "79c220a8-75af-4cec-bc2d-ee57d2fba39c"
+        "outputId": "989fc4a0-472e-4651-a7eb-54339213fe97"
       },
       "execution_count": 24,
       "outputs": [
@@ -991,10 +973,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 376
         },
         "id": "xmNxEyC-YGRV",
-        "outputId": "43faad00-3c53-4bd4-d5a4-ec78a4b62b94"
+        "outputId": "22b7e718-efc2-4305-ad32-74e0c0bac973"
       },
       "execution_count": 27,
       "outputs": [
@@ -1028,7 +1010,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d481b80b-990e-494f-8d79-2f045f29f7ac\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-fff17b29-8a59-490b-849f-c101034db9c2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1102,7 +1084,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d481b80b-990e-494f-8d79-2f045f29f7ac')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fff17b29-8a59-490b-849f-c101034db9c2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1154,12 +1136,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d481b80b-990e-494f-8d79-2f045f29f7ac button.colab-df-convert');\n",
+              "        document.querySelector('#df-fff17b29-8a59-490b-849f-c101034db9c2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d481b80b-990e-494f-8d79-2f045f29f7ac');\n",
+              "        const element = document.querySelector('#df-fff17b29-8a59-490b-849f-c101034db9c2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1179,8 +1161,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-543eb711-210c-4861-ab08-729ce7fe0e68\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-543eb711-210c-4861-ab08-729ce7fe0e68')\"\n",
+              "    <div id=\"df-1104e679-d23b-485f-b11e-7c2cba56f9a0\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1104e679-d23b-485f-b11e-7c2cba56f9a0')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1299,7 +1281,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-543eb711-210c-4861-ab08-729ce7fe0e68 button');\n",
+              "            document.querySelector('#df-1104e679-d23b-485f-b11e-7c2cba56f9a0 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1399,11 +1381,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "w_V8cBbyYUCD",
-        "outputId": "8f1fa635-4181-488e-edd6-6e4f89947108"
+        "outputId": "f4f58054-ba94-47b1-c283-8671a2441f75"
       },
       "execution_count": 30,
       "outputs": [
@@ -1457,12 +1438,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 380
+          "height": 554
         },
         "id": "VfsUJX-fWxvh",
-        "outputId": "033e887a-97ad-4004-ac6f-abafef955a72"
+        "outputId": "7e92a998-dbe5-44fb-b5ef-a5c15a3fc63c"
       },
-      "execution_count": 33,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1501,7 +1482,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-daa319c9-3934-4096-b5d5-66eba68c5b2c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-14519036-3a78-42c7-a398-54b7d9295053\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1603,7 +1584,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-daa319c9-3934-4096-b5d5-66eba68c5b2c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-14519036-3a78-42c7-a398-54b7d9295053')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1655,12 +1636,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-daa319c9-3934-4096-b5d5-66eba68c5b2c button.colab-df-convert');\n",
+              "        document.querySelector('#df-14519036-3a78-42c7-a398-54b7d9295053 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-daa319c9-3934-4096-b5d5-66eba68c5b2c');\n",
+              "        const element = document.querySelector('#df-14519036-3a78-42c7-a398-54b7d9295053');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1680,8 +1661,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-65920c9f-202c-413f-9946-6e429de1e322\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-65920c9f-202c-413f-9946-6e429de1e322')\"\n",
+              "    <div id=\"df-e8a64149-42e5-4075-8877-bc4752141510\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e8a64149-42e5-4075-8877-bc4752141510')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1800,7 +1781,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-65920c9f-202c-413f-9946-6e429de1e322 button');\n",
+              "            document.querySelector('#df-e8a64149-42e5-4075-8877-bc4752141510 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1817,7 +1798,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 32
         }
       ]
     },
@@ -1827,7 +1808,7 @@
       "metadata": {
         "id": "prM4zt9BWyQ9"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     }
   ]
